# SPDX-FileCopyrightText: 2015-2022 CERN.
# SPDX-FileCopyrightText: 2025-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-webhooks"
description = "Invenio webhooks module to create REST APIs."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "invenio",
  "webhooks",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "invenio-base>=2.3.0,<3.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",
  "invenio-oauth2server>=6.0.0,<7.0.0",
  "invenio-oauthclient>=9.0.0,<10.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-webhooks"

[project.entry-points."invenio_base.api_apps"]
invenio_webhooks = "invenio_webhooks:InvenioWebhooks"

[project.entry-points."invenio_base.api_blueprints"]
invenio_webhooks = "invenio_webhooks.views:blueprint"

[project.entry-points."invenio_base.apps"]
invenio_webhooks = "invenio_webhooks:InvenioWebhooks"

[project.entry-points."invenio_base.models"]
invenio_webhooks = "invenio_webhooks.models"

[project.entry-points."invenio_db.alembic"]
invenio_webhooks = "invenio_webhooks:alembic"

[project.entry-points."invenio_db.models"]
invenio_webhooks = "invenio_webhooks.models"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_webhooks"

[project.entry-points."invenio_oauth2server.scopes"]
webhooks_event = "invenio_webhooks.views:webhooks_event"

[project.optional-dependencies]
tests = [
  "invenio-app>=3.0.0,<4.0.0",
  "invenio-celery>=1.2.4,<3.0.0",
  "invenio-cli>=1.0.5",
  "invenio-db[postgresql,mysql,versioning]>=2.2.0,<3.0.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_webhooks/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_webhooks/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_webhooks/translations/messages.pot"
output_dir = "invenio_webhooks/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_webhooks/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_webhooks",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_webhooks --cov-report=term-missing'
testpaths = "tests invenio_webhooks"
live_server_scope = "module"
